# visualization

./: .claudeignore  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  command_memo  config.yaml  implementation_plan.md  pyproject.toml  spec_decisions.md  spec_main.md
custom_bsdf_readers/: __init__.py  lightools_bsdf.py
custom_surfaces/: device_vk6.py  device_xyz.py
docs/: fft_bsdf_math.md  metric_bsdf_relation.md  sparkle_approximation_levels.md  sparkle_calculation.md  sparkle_calibration.md
outputs/: _demo_fft_fresnel_vs_psd.py  _demo_fft_modes.py  _demo_metric_overlays.py  _demo_overlay.py  _demo_secondary_axis.py  _demo_theta_i_relative.py  demo_metric_overlays.html  index.html
sample_inputs/: README.txt  config_all_artifacts.yaml  config_comp_meas_bsdf.yaml  config_device_vk6.yaml  config_device_xyz.yaml  device_xyz_sample.csv
src/bsdf_sim/: __init__.py
src/bsdf_sim/cli/: main.py
src/bsdf_sim/io/: __init__.py  bsdf_reader.py  config_loader.py  parquet_schema.py
src/bsdf_sim/metrics/: __init__.py  optical.py  sparkle_calibrator.py  sparkle_extended.py  surface.py
src/bsdf_sim/models/: __init__.py  base.py  (+3 more)
tests/: test_bsdf_binning.py  test_bsdf_reader.py  test_cli.py  test_config_loader.py  test_dashboard.py  test_fft_bsdf.py  test_measured.py  test_metric_overlays.py  test_metrics.py  test_mlflow_params.py  test_models.py  test_optimization.py  test_parquet_roundtrip.py  test_profile_extract.py  test_psd_bsdf.py  test_run_id_resolver.py  test_secondary_axis.py  test_sparkle_calibrator.py  test_sparkle_extended.py  test_visualize_overlay.py
(+15 files in other folders)
